--- a/team-2.html
+++ b/team-2.html
@@ -446,8 +446,8 @@
 
 
         <!-- main-footer -->
-        <footer class="main-footer p_relative bg-color-2">
-            <div class="icon-layer"><img src="assets/images/icons/icon-5.png" alt=""></div>
+        <footer class="main-footer p_relative bg-color-2"> <img src="assets/images/icons/image.png" alt="footer bg" class="footer-bg">
+             
             <div class="footer-top p_relative d_block">
                 <div class="auto-container">
                     <div class="row clearfix">
